--- a/styles/style.css
+++ b/styles/style.css
@@ -53,6 +53,8 @@ ol {
 
 /* ----------------------- секция result ---------------*/
 .result {
+  margin-top: 77px;
+
   grid-area: result;
 
   display: flex;
@@ -80,7 +82,8 @@ ol {
 
 .search-form__fieldset {
   border: none;
-  height: 54px;
+
+  height: fit-content;
 
   display: flex;
   flex-direction: column;
@@ -129,15 +132,16 @@ ol {
   width: 225px;
   height: 27px;
 
-  font-family: "Fira Sans Condensed", sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif; 
   font-weight: 400;
   font-size: 18px;
-  color: #fff;
+  color: #fff; 
+
   background-color: inherit;
 
   border: none;
-  border-top: 1px solid #fff;
-  border-bottom: 1px solid #fff;
+  border-top: 1px solid currentColor;
+  border-bottom: 1px solid currentColor;
   border-left: 1px solid transparent;
   border-right: 1px solid transparent;
 
@@ -153,8 +157,8 @@ ol {
 /* границы текстового инпута при зажатии */
 .search-form__textfield:active {
   outline: none;
-  border-left-color: #fff;
-  border-right-color: #fff;
+  border-left-color: currentColor;
+  border-right-color: currentColor;
 }
 
 .search-form__textfield::placeholder {
@@ -175,7 +179,6 @@ ol {
 
 /* нижнее подчеркивание чекбоксов при :hover */
 .search-form__label:has(.search-form__checkbox):hover .search-form__label-text {
-  /* border-bottom: 1px solid #fff; */
   text-decoration: underline;
   text-decoration-skip-ink: none;
   text-underline-offset: 2px;
@@ -187,6 +190,7 @@ ol {
   justify-content: center;
 
   border: 1px solid #fff;
+  
   width: 19px;
   height: 19px;
 }
@@ -210,9 +214,9 @@ ol {
   font-weight: 700;
   font-size: 18px;
   text-align: center;
-  color: #fff;
+  color: inherit;
 
-  border: 1px solid #fff;
+  border: 1px solid currentColor;
 
   cursor: pointer;
 }
@@ -237,16 +241,13 @@ ol {
 
 /* кнопка "найти" */
 .search-form__submit-button {
-  height: 34px;
-  width: 194px;
+  padding: 6px 74px;
+
   align-self: flex-end;
 }
 
 /* кнопка "показать еще"  */
 .more-button {
-  height: 34px;
-  width: 390px;
-
   white-space: nowrap;
 
   padding: 6px 142px;
@@ -264,6 +265,7 @@ ol {
   flex-direction: column;
   gap: 26px;
 
+  min-width: 402px;
   width: 100%;
   height: 100%;
 }
@@ -376,7 +378,7 @@ ol {
 }
 
 .content__video-card-description {
-  font-family: "Fira Sans Condensed";
+  font-family: "Fira Sans Condensed", sans-serif ;
   font-weight: 400;
   font-size: 18px;
   line-height: 90%;
@@ -385,6 +387,9 @@ ol {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 4;
+  line-clamp: 4;
+
+  overflow: hidden;
 }
 
 .content__video-card-thumbnail {
